[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ollama>=0.4.0",
    "openai>=1.30.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0",
]

[project.scripts]
hermes = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["agent", "db"]
